# Capstone_Project-Packaging-line-Data-Capturing-Application

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  lookup.py  loss_event.py  shift.py
app/repositories/: __init__.py  base.py  loss_event_repo.py  shift_repo.py  user_repo.py
app/routes/: __init__.py  auth.py  operator.py  operator_shift.py  supervisor.py
app/schemas/: __init__.py  auth.py  loss_event.py  shift.py
app/services/: __init__.py  auth_service.py  derived.py  export_service.py  loss_classification.py  loss_event_service.py  review_service.py  shift_service.py
app/services/anomaly/: __init__.py  base.py  high_reject_rate.py  long_downtime.py  rules.py
app/static/css/: app.css
app/templates/: 403.html  base.html  index.html
app/templates/auth/: login.html
app/templates/operator/: _bcs_options.html  entry.html  new_shift.html  shifts.html
app/templates/supervisor/: dashboard.html  review.html
docs/: ARCHITECTURE.md  DESIGN.md  TIMELINE.md  USER_STORIES .md  USER_STORIES.md
scripts/: __init__.py  init_db.py  seed.py  seed_data.py  seed_synthetic.py
tests/: conftest.py
tests/integration/: test_app_smoke.py  test_auth.py  test_export.py  test_operator_form.py  test_seed.py  test_start_shift.py  test_supervisor.py
tests/unit/: test_anomaly_rules.py  test_auth_service.py  test_derived_and_anomaly.py  test_export_service.py  test_loss_classification.py  test_review_service.py
